2005-05-29  Francois Dumont  <dums@stlport...>

	* test/unit/locale_test.cpp: Add opendir returned value when listing
	installed locale under linux.

2005-05-27  Francois Dumont  <dums@stlport...>

	* src/locale_impl.cpp: Add an initialization segment specification to make
	global static variable ios_base::Init instance initialization prioritized
	compare to STLport static global variable. iostreams like cout can be used
	in global static variable initialization.

2005-05-26  Francois Dumont  <dums@stlport...>

	* build/Makefiles/nmake/evc4.mak: Patch from Ulrich Eckhardt to use CC
	environment variable defined by WCE*.bat script rather than redefining
	it.
	
	* src/locale.cpp, locale_impl.cpp, locale_catalog.cpp: New pass to move
	static global variable in function to make initialization order clear.
	
2005-05-25  Francois Dumont  <dums@stlport...>

	* stlport/ciso646: Creation of this missing C++ standard header STLport
	wrapper.
	
	* stlport/stl/_istream.h, _num_get.c, _algo.c, _monetary.c, _time_facets.h,
	_time_facets.c: Replaced occurences of __in and __out reserved by Microsoft.

2005-05-24  Francois Dumont  <dums@stlport...>

	* stlport/headers: Patch from Michael Fink to avoid inclusion of headers
	not available under evc3.

	* test/unit/*_header_test.cpp: Fix tests for no iostreams mode.

	* src/locale_impl.cpp, locale_impl.cpp: Modify implementation to force 
	correct initialization order of static instances.

	* stlport/strstream: Add _ioserr.h file to avoid inclusion in no iostreams
	mode.

2005-05-23  Petr Ovtchenkov  <ptr@island...>

	* stlport/stl/_config.h: detect endianness for Intel's 64bit Pentium and
	Itanium processors. Thanks Albrecht Fritzsche for contribution.

2005-05-20  Francois Dumont  <dums@stlport...>

	* build/test/eh: Patch from Michael Fink to add EVC4 support for this test
	suite.

	* src/fstream.cpp: Use of Wlodek Szafran implementation for the _Filebuf_base::_M_read
	method which is more performant than the previous one.
