@@ -1,4 +1,4 @@
-# -*- makefile -*- Time-stamp: <03/07/10 13:22:53 ptr>
+# -*- makefile -*- Time-stamp: <05/03/28 23:42:07 ptr>
 # $Id$
 
 # Shared libraries tags
@@ -12,21 +12,21 @@ dbg-shared:	$(OUTPUT_DIR_DBG) ${SO_NAME_OUT_DBGxxx}
 stldbg-shared:	$(OUTPUT_DIR_STLDBG) ${SO_NAME_OUT_STLDBGxxx}
 
 ${SO_NAME_OUTxxx}:	$(OBJ) $(LIBSDEP)
-	$(LINK.cc) $(LINK_OUTPUT_OPTION) $(OBJ) $(LDLIBS)
+	$(LINK.cc) $(LINK_OUTPUT_OPTION) ${START_OBJ} $(OBJ) $(LDLIBS) ${STDLIBS} ${END_OBJ}
 	(cd $(OUTPUT_DIR); \
 	 rm -f ${SO_NAMExx}; ln -s $(SO_NAMExxx) ${SO_NAMExx}; \
 	 rm -f ${SO_NAMEx}; ln -s ${SO_NAMExx} ${SO_NAMEx}; \
 	 rm -f ${SO_NAME}; ln -s ${SO_NAMEx} ${SO_NAME})
 
 ${SO_NAME_OUT_DBGxxx}:	$(OBJ_DBG) $(LIBSDEP)
-	$(LINK.cc) $(LINK_OUTPUT_OPTION) $(OBJ_DBG) $(LDLIBS)
+	$(LINK.cc) $(LINK_OUTPUT_OPTION) ${START_OBJ} $(OBJ_DBG) $(LDLIBS) ${STDLIBS} ${END_OBJ}
 	(cd $(OUTPUT_DIR_DBG); \
 	 rm -f ${SO_NAME_DBGxx}; ln -s $(SO_NAME_DBGxxx) ${SO_NAME_DBGxx}; \
 	 rm -f ${SO_NAME_DBGx}; ln -s ${SO_NAME_DBGxx} ${SO_NAME_DBGx}; \
 	 rm -f ${SO_NAME_DBG}; ln -s ${SO_NAME_DBGx} ${SO_NAME_DBG})
 
 ${SO_NAME_OUT_STLDBGxxx}:	$(OBJ_STLDBG) $(LIBSDEP)
-	$(LINK.cc) $(LINK_OUTPUT_OPTION) $(OBJ_STLDBG) $(LDLIBS)
+	$(LINK.cc) $(LINK_OUTPUT_OPTION) ${START_OBJ} $(OBJ_STLDBG) $(LDLIBS) ${STDLIBS} ${END_OBJ}
 	(cd $(OUTPUT_DIR_STLDBG); \
 	 rm -f ${SO_NAME_STLDBGxx}; ln -s $(SO_NAME_STLDBGxxx) ${SO_NAME_STLDBGxx}; \
 	 rm -f ${SO_NAME_STLDBGx}; ln -s ${SO_NAME_STLDBGxx} ${SO_NAME_STLDBGx}; \
